%YAML 1.1
%TAG !u! tag:unity3d.com,2011:
--- !u!91 &9100000
AnimatorController:
  m_ObjectHideFlags: 0
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: glorten
  serializedVersion: 2
  m_AnimatorParameters:
  - m_Name: speed
    m_Type: 1
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: attack
    m_Type: 9
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: attackanim
    m_Type: 1
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: hit
    m_Type: 9
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: dead
    m_Type: 4
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: appear
    m_Type: 9
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  m_AnimatorLayers:
  - serializedVersion: 3
    m_Name: Base Layer
    m_StateMachine: {fileID: 110700000}
    m_Mask: {fileID: 0}
    m_BlendingMode: 0
    m_SyncedLayerIndex: -1
    m_StateMachineMotionSetIndex: 0
    m_DefaultWeight: 0
    m_IKPass: 0
    m_SyncedLayerAffectsTiming: 0
    m_Controller: {fileID: 9100000}
--- !u!1101 &110100000
Transition:
  serializedVersion: 2
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110200000}
  m_DstState: {fileID: 110225159}
  m_TransitionDuration: .0921274051
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 3
    m_ConditionEvent: speed
    m_EventTreshold: 0
    m_ExitTime: .8125
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
  m_CanTransitionToSelf: 0
--- !u!1101 &110106834
Transition:
  serializedVersion: 2
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 0}
  m_DstState: {fileID: 110205219}
  m_TransitionDuration: .0403038003
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: hit
    m_EventTreshold: 0
    m_ExitTime: .899999976
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
  m_CanTransitionToSelf: 0
--- !u!1101 &110107531
Transition:
  serializedVersion: 2
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 0}
  m_DstState: {fileID: 110288146}
  m_TransitionDuration: .0022769263
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: dead
    m_EventTreshold: 0
    m_ExitTime: .899999976
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
  m_CanTransitionToSelf: 0
--- !u!1101 &110109743
Transition:
  serializedVersion: 2
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110268702}
  m_DstState: {fileID: 110200000}
  m_TransitionDuration: .269293904
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 5
    m_ConditionEvent: 
    m_EventTreshold: 0
    m_ExitTime: .741724312
  m_Atomic: 0
  m_Solo: 0
  m_Mute: 0
  m_CanTransitionToSelf: 0
--- !u!1101 &110132542
Transition:
  serializedVersion: 2
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110262086}
  m_DstState: {fileID: 110200000}
  m_TransitionDuration: .0291913394
  m_TransitionOffset: .0984664187
  m_Conditions:
  - m_ConditionMode: 5
    m_ConditionEvent: 
    m_EventTreshold: 0
    m_ExitTime: .970808685
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
  m_CanTransitionToSelf: 0
--- !u!1101 &110134577
Transition:
  serializedVersion: 2
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 0}
  m_DstState: {fileID: 110205219}
  m_TransitionDuration: .00213763025
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: hit
    m_EventTreshold: 0
    m_ExitTime: .899999976
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
  m_CanTransitionToSelf: 0
--- !u!1101 &110136817
Transition:
  serializedVersion: 2
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 0}
  m_DstState: {fileID: 110262086}
  m_TransitionDuration: .00153359701
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: appear
    m_EventTreshold: 0
    m_ExitTime: .899999976
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
  m_CanTransitionToSelf: 0
--- !u!1101 &110140391
Transition:
  serializedVersion: 2
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110205219}
  m_DstState: {fileID: 110200000}
  m_TransitionDuration: .0933812335
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 5
    m_ConditionEvent: 
    m_EventTreshold: 0
    m_ExitTime: .741379321
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
  m_CanTransitionToSelf: 0
--- !u!1101 &110147194
Transition:
  serializedVersion: 2
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110224765}
  m_DstState: {fileID: 110200000}
  m_TransitionDuration: .0848686323
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 5
    m_ConditionEvent: 
    m_EventTreshold: 0
    m_ExitTime: .680909455
  m_Atomic: 0
  m_Solo: 0
  m_Mute: 0
  m_CanTransitionToSelf: 0
--- !u!1101 &110154980
Transition:
  serializedVersion: 2
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110225159}
  m_DstState: {fileID: 110200000}
  m_TransitionDuration: .118364893
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 4
    m_ConditionEvent: speed
    m_EventTreshold: .100000001
    m_ExitTime: .772727251
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
  m_CanTransitionToSelf: 0
--- !u!1101 &110157345
Transition:
  serializedVersion: 2
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 0}
  m_DstState: {fileID: 110288146}
  m_TransitionDuration: .0501942709
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: dead
    m_EventTreshold: 0
    m_ExitTime: .899999976
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
  m_CanTransitionToSelf: 0
--- !u!1101 &110159432
Transition:
  serializedVersion: 2
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 0}
  m_DstState: {fileID: 110224765}
  m_TransitionDuration: .0155641474
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: attack
    m_EventTreshold: 0
    m_ExitTime: .899999976
  - m_ConditionMode: 3
    m_ConditionEvent: attackanim
    m_EventTreshold: .449999988
    m_ExitTime: .899999976
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
  m_CanTransitionToSelf: 0
--- !u!1101 &110167870
Transition:
  serializedVersion: 2
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 0}
  m_DstState: {fileID: 110262086}
  m_TransitionDuration: 0
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: appear
    m_EventTreshold: 0
    m_ExitTime: .899999976
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
  m_CanTransitionToSelf: 0
--- !u!1101 &110177707
Transition:
  serializedVersion: 2
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 0}
  m_DstState: {fileID: 110268702}
  m_TransitionDuration: 0
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: attack
    m_EventTreshold: 0
    m_ExitTime: .899999976
  - m_ConditionMode: 4
    m_ConditionEvent: attackanim
    m_EventTreshold: .5
    m_ExitTime: .899999976
  m_Atomic: 0
  m_Solo: 0
  m_Mute: 0
  m_CanTransitionToSelf: 0
--- !u!1101 &110192976
Transition:
  serializedVersion: 2
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 0}
  m_DstState: {fileID: 110224765}
  m_TransitionDuration: 0
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: attack
    m_EventTreshold: 0
    m_ExitTime: .899999976
  - m_ConditionMode: 3
    m_ConditionEvent: attackanim
    m_EventTreshold: .5
    m_ExitTime: .899999976
  m_Atomic: 0
  m_Solo: 0
  m_Mute: 0
  m_CanTransitionToSelf: 0
--- !u!1101 &110194429
Transition:
  serializedVersion: 2
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 0}
  m_DstState: {fileID: 110268702}
  m_TransitionDuration: .00650465349
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: attack
    m_EventTreshold: .5
    m_ExitTime: .899999976
  - m_ConditionMode: 4
    m_ConditionEvent: attackanim
    m_EventTreshold: .451000005
    m_ExitTime: .899999976
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
  m_CanTransitionToSelf: 0
--- !u!1102 &110200000
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: Idle
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400000, guid: 438fc40d41e7a9b43bc5ae00a34f8279, type: 3}
  m_ParentStateMachine: {fileID: 110700000}
  m_Position: {x: 288, y: 288, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110205219
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: Hit
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400008, guid: 438fc40d41e7a9b43bc5ae00a34f8279, type: 3}
  m_ParentStateMachine: {fileID: 110700000}
  m_Position: {x: 756, y: 96, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110224765
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: Attack2
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400006, guid: 438fc40d41e7a9b43bc5ae00a34f8279, type: 3}
  m_ParentStateMachine: {fileID: 110700000}
  m_Position: {x: 456, y: 108, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110225159
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: Walk
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400002, guid: 438fc40d41e7a9b43bc5ae00a34f8279, type: 3}
  m_ParentStateMachine: {fileID: 110700000}
  m_Position: {x: 96, y: 180, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110262086
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: Appear
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400012, guid: 438fc40d41e7a9b43bc5ae00a34f8279, type: 3}
  m_ParentStateMachine: {fileID: 110700000}
  m_Position: {x: -144, y: 144, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110268702
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: Attack1
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400004, guid: 438fc40d41e7a9b43bc5ae00a34f8279, type: 3}
  m_ParentStateMachine: {fileID: 110700000}
  m_Position: {x: 228, y: 108, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110288146
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: Death
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400010, guid: 438fc40d41e7a9b43bc5ae00a34f8279, type: 3}
  m_ParentStateMachine: {fileID: 110700000}
  m_Position: {x: 696, y: -72, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: 
--- !u!1107 &110700000
StateMachine:
  serializedVersion: 2
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: Base Layer
  m_DefaultState: {fileID: 110200000}
  m_States:
  - {fileID: 110200000}
  - {fileID: 110225159}
  - {fileID: 110268702}
  - {fileID: 110224765}
  - {fileID: 110288146}
  - {fileID: 110205219}
  - {fileID: 110262086}
  m_ChildStateMachine: []
  m_ChildStateMachinePosition: []
  m_OrderedTransitions:
    data:
      first: {fileID: 0}
      second:
      - {fileID: 110194429}
      - {fileID: 110159432}
      - {fileID: 110106834}
      - {fileID: 110157345}
      - {fileID: 110167870}
    data:
      first: {fileID: 110200000}
      second:
      - {fileID: 110100000}
    data:
      first: {fileID: 110225159}
      second:
      - {fileID: 110154980}
    data:
      first: {fileID: 110268702}
      second:
      - {fileID: 110109743}
    data:
      first: {fileID: 110224765}
      second:
      - {fileID: 110147194}
    data:
      first: {fileID: 110288146}
      second: []
    data:
      first: {fileID: 110205219}
      second:
      - {fileID: 110140391}
    data:
      first: {fileID: 110262086}
      second:
      - {fileID: 110132542}
  m_MotionSetCount: 1
  m_AnyStatePosition: {x: 372, y: -72, z: 0}
  m_ParentStateMachinePosition: {x: 800, y: 20, z: 0}
